--- a/index.html
+++ b/index.html
@@ -214,12 +214,24 @@
                     </svg>
                 </div>
                 <div class="aboutme__panel show-panel">
-                    <p class="aboutme__list-content"><span class="aboutme__span-italic-bold">"Zioła i
-                            produkty wzmacniające organizm znane od lat w tradycyjnej medycynie chińskiej"</span> -
-                        kordyceps część 1, <span class="aboutme__span-bold">Naturoterapia w praktyce.</span></p>
-                    <p class="aboutme__list-content"><span class="aboutme__span-italic-bold">"Akupunktura -
-                            wsparcie leczenia choroby zwyrodnieniowej stawów"</span>, czasopismo <span
-                            class="aboutme__span-bold">Zdrowy balans.</span></p>
+
+                    <p class="aboutme__list-content"><span class="aboutme__span-italic-bold">„Mięśniaki macicy i torbiele jajników - spojrzenie tradycyjnej medycyny chińskiej”</span>
+                    <span class="aboutme__span-bold">Naturoterapia w praktyce.</span>
+                    </p>
+                    <p class="aboutme__list-content"><span class="aboutme__span-italic-bold">„Zastój Qi Wątroby a zespół napięcia przedmiesiączkowego w ujęciu medycyny chińskiej” </span><span
+                            class="aboutme__span-bold">Naturoterapia w praktyce.</span>
+                    </p>
+                    <p class="aboutme__list-content"><span class="aboutme__span-italic-bold">"Zioła i produkty wzmacniające organizm znane od lat w tradycyjnej medycynie chińskiej - traganek, cytryniec chiński”</span>, część 2, <span
+                            class="aboutme__span-bold">Naturoterapia w praktyce.</span>
+                    </p>
+                    <p class="aboutme__list-content"><span class="aboutme__span-italic-bold">"Zioła i produkty wzmacniające organizm znane od lat w tradycyjnej medycynie chińskiej- kordyceps”</span>, część 1, <span
+                            class="aboutme__span-bold">Naturoterapia w praktyce.</span>
+                    </p>
+                    <p class="aboutme__list-content"><span class="aboutme__span-italic-bold">"Akupunktura - wsparcie leczenia choroby zwyrodnieniowej stawów" czasopismo  </span> <span
+                            class="aboutme__span-bold">Zdrowy balans.</span>
+                    </p>
+
+
                 </div>
 
                 <div class="aboutme__accordion">
@@ -392,10 +404,10 @@
                     owocem mojej pasji, wiedzy i doświadczenia. Razem stworzymy harmonię w Waszym życiu i otworzymy
                     drzwi do zdrowia w najpiękniejszy możliwy sposób.
                 </p>
-                <img class="offer__hero-picture" src="dist/img/offer-heroimg.jpg"
+                <!-- <img class="offer__hero-picture" src="dist/img/offer-heroimg.jpg"
                     alt="Mieszanka ziołowa, medycyna chińska">
                 <img class="offer__hero-picture-small" src="dist/img/offer-heroimg.jpg"
-                    alt="Mieszanka ziołowa, medycyna chińska">
+                    alt="Mieszanka ziołowa, medycyna chińska"> -->
             </div>
         </div>
 
@@ -461,17 +473,6 @@
                 </div>
 
                 <div class="offer__acupuncture-square offer__acupuncture-square2-desktop">
-                    <p class="offer__acupuncture-offer-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Voluptates, nesciunt ullam harum exercitationem debitis aliquid quod eius eos adipisci odit
-                        modi, quasi ducimus? Consequatur, id quod quos tempore reprehenderit voluptate omnis quia iure
-                        repudiandae totam veniam esse, exercitationem laborum, ea ipsam quibusdam enim velit delectus
-                        alias beatae dolores sint magnam quisquam! Nisi totam nemo quod impedit, at a soluta modi iure
-                        dolorum molestias dolore tempora qui veniam reiciendis voluptatem recusandae non illo? Odio
-                        dolor laboriosam reiciendis provident officiis, veritatis rerumque maxime sequi necessitatibus
-                        illo quam ipsa aliquam adipisci quas nisi autem pariatur fugiat amet quaerat impedit? Illum
-                        molestias blanditiis rerum atque. Aut qui impedit modi voluptas voluptatibus ab totam expedita
-                        placeat, eum inventore explicabo in rerum harum!
-                    </p>
                 </div>
 
 
@@ -502,10 +503,7 @@
             </div>
         </div>
 
-        <div class="offer__acupuncture-sentence">
-            <p class="offer__acupuncture-sentence-text">Akupunktura jest wspaniałym systemem profilaktycznym, który
-                pomoże chronić Twoje zdrowie.</p>
-        </div>
+
 
 
         <div class="wrapper">
@@ -672,6 +670,12 @@
         </div>
 
 
+        <div class="offer__acupuncture-sentence">
+            <p class="offer__acupuncture-sentence-text">Akupunktura jest wspaniałym systemem profilaktycznym, który
+                pomoże chronić Twoje zdrowie.</p>
+        </div>
+
+
 
         <div class="offer__dietetics-bg">
             <div class="wrapper">
@@ -763,7 +767,7 @@
                 <p class="offer__acupuncture-sentence-text-tree">„Zdrowie jest pełnym dobrostanem fizycznym, psychicznym
                     i
                     społecznym, a nie tylko brakiem choroby lub niedomagania".</p>
-                <p class="offer__acupuncture-sentence-text-WHO">Definicja zdrowia wg.WHO.</p>
+                <p class="offer__acupuncture-sentence-text-WHO">Definicja zdrowia wg. WHO</p>
             </div>
         </div>
 
@@ -907,6 +911,28 @@
         </div>
 
 
+        <div class="wrapper">
+            <div class="offer__trainings-container">
+                <div class="offer__trainings-box" id="herbal-medicine">
+                    <h3 class="h3-title-subsections">Szkolenia</h3>
+                    <p class="offer__trainings-text">
+                        Prowadzę również szkolenia z zakresu:
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores facere quidem doloremque accusantium amet voluptates beatae libero magnam, ex, sequi hic doloribus quisquam tenetur porro. Modi pariatur veritatis molestiae qui ipsa rerum debitis eligendi laborum illum est sint ab consequuntur unde ratione soluta tempore, culpa doloremque quibusdam vero quasi voluptatum libero excepturi! Ad, illum quos. Deleniti id hic fugiat natus?
+                    </p>
+
+                    <a href="#trainings" class="offer__button" target="_blank">
+                        <span class="offer__button-text">SPRAWDŹ OFERTĘ</span>
+                        <div class="offer__vertical-bar">
+                        </div>
+                        <img src="dist/img/icon/iconmonstr-arrow-right.png" alt="">
+                    </a>
+                </div>
+                <div>
+                    <img src="dist/img/trainings.png" class="offer__trainings-img"
+                        alt="Zioła, ziołolecznictwo akupunktura złotów">
+                </div>
+            </div>
+        </div>
 
 
     </section>
