--- a/trainings.html
+++ b/trainings.html
@@ -60,7 +60,7 @@
                                 <a href="#trainings" target="_blank" class="nav__dropdown-menu-offer-items"><li class="nav__dropdown-menu-li">szkolenia<img src="dist/img/icon/external-link.png" alt="" class="nav__external-link-icon"></li></a>
                             </ul>
                         </div>
-                        <a href="#prices"> <li class="nav__nav-item">Cennik</li></a>
+                        <a href="#price-list"> <li class="nav__nav-item">Cennik</li></a>
                         <a href="#opinion"><li class="nav__nav-item">Opinie</li></a>
                         <a href="#blog"><li class="nav__nav-item">Blog</li></a>
                         <a href="#contact"><li class="nav__nav-item">Kontakt</li></a>
@@ -82,7 +82,7 @@
                 <ul class="nav__mobile-menu-items">
                     <a href="#aboutme" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content mobile-nav-links1">O mnie</li></a>
                     <a href="#offer" class="nav__mobile-menu-link "><li class="nav__mobile-menu-items-content mobile-menu-offer-item">Oferta<img class="nav__arrow-icon nav_arrow-icon-mobile" src='dist/img/icon/arrow-icon-right.png' alt=""></li></a>
-                    <a href="#prices" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content mobile-nav-links2">Cennik</li></a>
+                    <a href="#price-list" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content mobile-nav-links2">Cennik</li></a>
                     <a href="#opinion" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content mobile-nav-links3">Opinie</li></a>
                     <a href="#blog" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content blog-item mobile-nav-links4">Blog</li></a>
                     <a href="#contact" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content mobile-nav-links5">Kontakt</li></a>
