--- a/trainings.html
+++ b/trainings.html
@@ -63,6 +63,7 @@
                         <a href="#price-list"> <li class="nav__nav-item">Cennik</li></a>
                         <a href="#opinion"><li class="nav__nav-item">Opinie</li></a>
                         <a href="#blog"><li class="nav__nav-item">Blog</li></a>
+                        <a href="#faq"><li class="nav__nav-item">FAQ</li></a>
                         <a href="#contact"><li class="nav__nav-item">Kontakt</li></a>
                     </ul>
                 </div>
@@ -85,6 +86,7 @@
                     <a href="#price-list" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content mobile-nav-links2">Cennik</li></a>
                     <a href="#opinion" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content mobile-nav-links3">Opinie</li></a>
                     <a href="#blog" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content blog-item mobile-nav-links4">Blog</li></a>
+                    <a href="#faq" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content mobile-nav-links5">FAQ</li></a>
                     <a href="#contact" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content mobile-nav-links5">Kontakt</li></a>
                 </ul>
             </div>
