--- a/trainings.html
+++ b/trainings.html
@@ -128,7 +128,9 @@
         </section>
     </main>
 
-    
+    <footer class="footer">
+
+</footer>
 
     <script src="dist/js/main.min.js"></script>
 </body>
