--- a/szkolenia-akupunktura.html
+++ b/szkolenia-akupunktura.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Szkolenia - Medycyna Chińska</title>
+    <title>Szkolenia - Medycyna Chińska i Akuppunktura w Złotowie</title>
 
 
     <link rel="stylesheet" href="dist/css/style.min.css">
@@ -57,7 +57,7 @@
                                 <a href="#massage" class="nav__dropdown-menu-offer-items"><li class="nav__dropdown-menu-li">Masaż gua sha</li></a>
                                 <a href="#chinese-bubbles" class="nav__dropdown-menu-offer-items"><li class="nav__dropdown-menu-li">Bańki chińskie</li></a>
                                 <a href="#heat-therapy" class="nav__dropdown-menu-offer-items"><li class="nav__dropdown-menu-li">Moksowanie / Terapia ciepłem</li></a>
-                                <a href="#trainings" target="_blank" class="nav__dropdown-menu-offer-items"><li class="nav__dropdown-menu-li">szkolenia<img src="dist/img/icon/external-link.png" alt="" class="nav__external-link-icon"></li></a>
+                                <a href="szkolenia-akupunktura.html" target="_blank" class="nav__dropdown-menu-offer-items"><li class="nav__dropdown-menu-li">szkolenia<img src="dist/img/icon/external-link.png" alt="" class="nav__external-link-icon"></li></a>
                             </ul>
                         </div>
                         <a href="#price-list"> <li class="nav__nav-item">Cennik</li></a>
@@ -100,7 +100,7 @@
                     <a href="#massage" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link5">Masaż gua sha</li></a>
                     <a href="#chinese-bubbles" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link6">bańki chińskie</li></a>
                     <a href="#heat-therapy" class="nav__mobile-menu-link"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link7">Moksowanie / Terapia ciepłem</li></a>
-                    <a href="#trainings" class="nav__mobile-menu-link" target="_blank"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link8">Szkolenia <img src="dist/img/icon/external-link.png" alt="" class="nav__external-link-icon"></li></a>
+                    <a href="szkolenia-akupunktura.html" class="nav__mobile-menu-link" target="_blank"><li class="nav__mobile-menu-items-content-submenu submenu-LI-link8">Szkolenia <img src="dist/img/icon/external-link.png" alt="" class="nav__external-link-icon"></li></a>
                 </ul>
             </div>
         </div>
