contact and footer

--- a/szkolenia-akupunktura.html
+++ b/szkolenia-akupunktura.html
@@ -130,6 +130,83 @@
 
     <footer class="footer">
 
+    <div class="wrapper">
+        <div class="footer__container">
+
+            <div class="footer__box footer__box-company">
+                <img class="footer__box-company-logo" src="dist/img/logo-footer.jpg"
+                    alt="Logo, Medycyna Chińska Akupunktura Michalina Marciniak">
+                <p class="footer__box-company-text1">
+                    <span>AKUPUNKTURA</span>
+                    <span>DIETETYKA</span>
+                    <span>ZIOŁOLECZNICTWO</span>
+                </p>
+                <p class="footer__box-company-text2">MEDYCYNA CHIŃSKA W ZŁOTOWIE</p>
+            </div>
+
+
+
+            <div class="footer__box footer__box-offer">
+                <p class="footer__box-text1">OFERTA</p>
+                <p class="footer__box-text2"><a href="#chinese-medicine" class="footer__links">Medycyna Chińska</a></p>
+                <p class="footer__box-text2"><a href="#acupuncture" class="footer__links">Akupunktura</a></p>
+                <p class="footer__box-text2"><a href="#dietetics" class="footer__links">Dietetyka</a> </p>
+                <p class="footer__box-text2"><a href="#herbal-medicine" class="footer__links">Ziołolcznictwo</a></p>
+                <p class="footer__box-text2"><a href="#massage" class="footer__links">Masaż Gua Sha</a></p>
+                <p class="footer__box-text2"><a href="#chinese-bubbles" class="footer__links">Bańki Chińskie</a></p>
+                <p class="footer__box-text2"><a href="#heat-therapy" class="footer__links">Moksowanie</a></p>
+                <p class="footer__box-text2"><a href="szkolenia-akupunktura.html" target="_blank" class="footer__links">Szkolenia</a></p>
+            </div>
+
+
+
+            <div class="footer__boxes">
+
+                <div class="footer__box">
+                    <p class="footer__box-text1">
+                        POMOC
+                    </p>
+                    <p class="footer__box-text2"><a href="#faq" class="footer__links">FAQ</a></p>
+                    <p class="footer__box-text2"><a href="#contact" class="footer__links">Kontakt</a></p>
+                </div>
+
+                <div class="footer__box">
+                    <p class="footer__box-text1">
+                        SOCIAL MEDIA
+                    </p>
+                    <p class="footer__box-text2"><a href="https://www.facebook.com/akupunkturamm/" target="_blank"
+                            class="footer__links"><svg class="footer__box-social-media-icon"
+                                xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
+                                fill="none" stroke="#f6f6f6" stroke-width="1.5" stroke-linecap="round"
+                                stroke-linejoin="round" class="feather feather-facebook">
+                                <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path>
+                            </svg> Facebook</a></p>
+                    <p class="footer__box-text2"><a href="https://www.instagram.com/akupunktura.marciniak/"
+                            target="_blank" class="footer__links"><svg class="footer__box-social-media-icon"
+                                xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
+                                fill="none" stroke="#f6f6f6" stroke-width="1.5" stroke-linecap="round"
+                                stroke-linejoin="round" class="feather feather-instagram">
+                                <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
+                                <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
+                                <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
+                            </svg> Instagram</a></p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="footer__created-by">
+        <p class="footer__company-name">
+            <span>
+            &copy; <span class="footer-year"></span> Medycyna Chińska
+            </span>
+            <span class="footer__company-name-small">Michalina Marciniak</span></p>
+            <div class="footer__line"></div>
+            <p class="footer__project">projekt i wykonanie: <a class="footer__project-link" href="http://www.dreampage.pl" target="_blank">www.dreampage.pl</a></p>
+    </div>
+        
+
 </footer>
 
     <script src="dist/js/main.min.js"></script>
