--- a/index.html
+++ b/index.html
@@ -1130,7 +1130,7 @@
 
                 <div class="blog__box">
                     <div class="blog__box-img">
-                        <img class="blog__box-img-item" src="../dist/img/moksowanie.jpg" alt="Akupunktura, moksowanie">
+                        <img class="blog__box-img-item" src="dist/img/moksowanie.jpg" alt="Akupunktura, moksowanie">
                     </div>
                     <div class="blog__box-text">
                         <h3 class="blog__box-text-title">Tytuł artykułu</h3>
@@ -1149,7 +1149,7 @@
 
                 <div class="blog__box">
                     <div class="blog__box-img">
-                        <img class="blog__box-img-item" src="../dist/img/moksowanie.jpg" alt="Akupunktura, moksowanie">
+                        <img class="blog__box-img-item" src="dist/img/moksowanie.jpg" alt="Akupunktura, moksowanie">
                     </div>
                     <div class="blog__box-text">
                         <h3 class="blog__box-text-title">Tytuł artykułu</h3>
@@ -2130,7 +2130,7 @@
                 </a>
 
             </div>
-            
+
         </div>
         <iframe class="contact__box-map"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5662.538447844607!2d17.03883138036666!3d53.36466005396027!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4703c5736665d6a1%3A0x1836b9a0a2d0067!2zS3NpxJlkemEgRG9tYcWEc2tpZWdvIDE0YSwgNzctNDAwIFrFgm90w7N3!5e0!3m2!1spl!2spl!4v1688704868881!5m2!1spl!2spl"
@@ -2156,8 +2156,10 @@
         <div class="footer__container">
 
             <div class="footer__box footer__box-company">
-                <img class="footer__box-company-logo" src="dist/img/logo-footer.jpg"
-                    alt="Logo, Medycyna Chińska Akupunktura Michalina Marciniak">
+                <a href="http://www.akupunktura-zlotow.pl">
+                    <img class="footer__box-company-logo" src="dist/img/logo-footer.jpg"
+                        alt="Logo, Medycyna Chińska Akupunktura Michalina Marciniak">
+                </a>
                 <p class="footer__box-company-text1">
                     <span>AKUPUNKTURA</span>
                     <span>DIETETYKA</span>
@@ -2168,8 +2170,8 @@
 
 
 
-            <div class="footer__box footer__box-offer">
-                <p class="footer__box-text1">OFERTA</p>
+            <div class="footer__box footer__box-offer footer__offer">
+                <p class="footer__box-text1 ">OFERTA</p>
                 <p class="footer__box-text2"><a href="#chinese-medicine" class="footer__links">Medycyna Chińska</a></p>
                 <p class="footer__box-text2"><a href="#acupuncture" class="footer__links">Akupunktura</a></p>
                 <p class="footer__box-text2"><a href="#dietetics" class="footer__links">Dietetyka</a> </p>
@@ -2184,7 +2186,7 @@
 
             <div class="footer__boxes">
 
-                <div class="footer__box">
+                <div class="footer__box footer__help">
                     <p class="footer__box-text1">
                         POMOC
                     </p>
@@ -2213,6 +2215,18 @@
                                 <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
                             </svg> Instagram</a></p>
                 </div>
+
+
+                <div class="footer__box footer__box-contact">
+                    <p class="footer__box-text1">
+                        KONTAKT
+                    </p>
+                    <p class="footer__box-text2"><a href="tel:+48512466493" target="_blank"
+                            class="footer__links"><svg class="footer__box-social-media-icon" xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 24 24" fill="none" stroke="#f6f6f6" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-smartphone"><rect x="5" y="2" width="14" height="20" rx="2" ry="2"></rect><line x1="12" y1="18" x2="12.01" y2="18"></line></svg> +48 512 466 493</a></p>
+                    <p class="footer__box-text2"><a href="mailto:akupunktura.dietetyka@gmail.com"
+                            target="_blank" class="footer__links"><svg class="footer__box-social-media-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#f6f6f6" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-mail"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg> akupunktura.dietetyka@gmail.com</a></p>
+                </div>
+
             </div>
 
         </div>
