--- a/szkolenia-akupunktura.html
+++ b/szkolenia-akupunktura.html
@@ -9,6 +9,7 @@
 
 
     <link rel="stylesheet" href="dist/css/style.min.css">
+    <link rel="stylesheet" href="dist/css/style-trainings.min.css">
 </head>
 
 <body>
@@ -121,21 +122,41 @@
 
     </div>
 </header> 
+    <main class="trainings">
+    
+    <div class="wrapper">
+        <div class="trainings__title-center">
+            <h2 class="h2-title-sections">SZKOLENIA</h2>
+        </div>
 
-    <main class="main">
-        <section>
+        <div class="trainings__container">
 
-        </section>
-    </main>
+            <div class="trainings__box">
 
+            </div>
+
+
+        </div>
+
+    </div>
+
+
+
+
+
+
+    <svg class="trainings__svg-bottom-section" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#5d5d5d" fill-opacity="1" d="M0,288L60,282.7C120,277,240,267,360,250.7C480,235,600,213,720,197.3C840,181,960,171,1080,186.7C1200,203,1320,245,1380,266.7L1440,288L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
+</main>
     <footer class="footer">
 
     <div class="wrapper">
         <div class="footer__container">
 
             <div class="footer__box footer__box-company">
-                <img class="footer__box-company-logo" src="dist/img/logo-footer.jpg"
-                    alt="Logo, Medycyna Chińska Akupunktura Michalina Marciniak">
+                <a href="http://www.akupunktura-zlotow.pl">
+                    <img class="footer__box-company-logo" src="dist/img/logo-footer.jpg"
+                        alt="Logo, Medycyna Chińska Akupunktura Michalina Marciniak">
+                </a>
                 <p class="footer__box-company-text1">
                     <span>AKUPUNKTURA</span>
                     <span>DIETETYKA</span>
@@ -146,8 +167,8 @@
 
 
 
-            <div class="footer__box footer__box-offer">
-                <p class="footer__box-text1">OFERTA</p>
+            <div class="footer__box footer__box-offer footer__offer">
+                <p class="footer__box-text1 ">OFERTA</p>
                 <p class="footer__box-text2"><a href="#chinese-medicine" class="footer__links">Medycyna Chińska</a></p>
                 <p class="footer__box-text2"><a href="#acupuncture" class="footer__links">Akupunktura</a></p>
                 <p class="footer__box-text2"><a href="#dietetics" class="footer__links">Dietetyka</a> </p>
@@ -162,7 +183,7 @@
 
             <div class="footer__boxes">
 
-                <div class="footer__box">
+                <div class="footer__box footer__help">
                     <p class="footer__box-text1">
                         POMOC
                     </p>
@@ -191,6 +212,18 @@
                                 <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
                             </svg> Instagram</a></p>
                 </div>
+
+
+                <div class="footer__box footer__box-contact">
+                    <p class="footer__box-text1">
+                        KONTAKT
+                    </p>
+                    <p class="footer__box-text2"><a href="tel:+48512466493" target="_blank"
+                            class="footer__links"><svg class="footer__box-social-media-icon" xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 24 24" fill="none" stroke="#f6f6f6" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-smartphone"><rect x="5" y="2" width="14" height="20" rx="2" ry="2"></rect><line x1="12" y1="18" x2="12.01" y2="18"></line></svg> +48 512 466 493</a></p>
+                    <p class="footer__box-text2"><a href="mailto:akupunktura.dietetyka@gmail.com"
+                            target="_blank" class="footer__links"><svg class="footer__box-social-media-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#f6f6f6" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="feather feather-mail"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg> akupunktura.dietetyka@gmail.com</a></p>
+                </div>
+
             </div>
 
         </div>
