--- a/index.html
+++ b/index.html
@@ -1140,7 +1140,7 @@
                         </p>
                     </div>
                     <div class="blog__box-read-more">
-                        <a href="blog.html" target="_blank" class="blog__box-read-more-link">
+                        <a href="blog.html#article-8" target="_blank" class="blog__box-read-more-link">
                             <p class="blog__box-read-more-text">czytaj więcej...</p>
                         </a>
                     </div>
@@ -1159,7 +1159,7 @@
                         </p>
                     </div>
                     <div class="blog__box-read-more">
-                        <a href="blog.html" target="_blank" class="blog__box-read-more-link">
+                        <a href="blog.html#article-7" target="_blank" class="blog__box-read-more-link">
                             <p class="blog__box-read-more-text">czytaj więcej...</p>
                         </a>
                     </div>
@@ -1178,7 +1178,7 @@
                         </p>
                     </div>
                     <div class="blog__box-read-more">
-                        <a href="blog.html" target="_blank" class="blog__box-read-more-link">
+                        <a href="blog.html#article-6" target="_blank" class="blog__box-read-more-link">
                             <p class="blog__box-read-more-text">czytaj więcej...</p>
                         </a>
                     </div>
@@ -1197,7 +1197,7 @@
                         </p>
                     </div>
                     <div class="blog__box-read-more">
-                        <a href="blog.html" target="_blank" class="blog__box-read-more-link">
+                        <a href="blog.html#article-5" target="_blank" class="blog__box-read-more-link">
                             <p class="blog__box-read-more-text">czytaj więcej...</p>
                         </a>
                     </div>
@@ -1216,7 +1216,7 @@
                         </p>
                     </div>
                     <div class="blog__box-read-more">
-                        <a href="blog.html" target="_blank" class="blog__box-read-more-link">
+                        <a href="blog.html#article-4" target="_blank" class="blog__box-read-more-link">
                             <p class="blog__box-read-more-text">czytaj więcej...</p>
                         </a>
                     </div>
@@ -1235,7 +1235,7 @@
                         </p>
                     </div>
                     <div class="blog__box-read-more">
-                        <a href="blog.html" target="_blank" class="blog__box-read-more-link">
+                        <a href="blog.html#article-3" target="_blank" class="blog__box-read-more-link">
                             <p class="blog__box-read-more-text">czytaj więcej...</p>
                         </a>
                     </div>
@@ -1254,7 +1254,7 @@
                         </p>
                     </div>
                     <div class="blog__box-read-more">
-                        <a href="blog.html" target="_blank" class="blog__box-read-more-link">
+                        <a href="blog.html#article-2" target="_blank" class="blog__box-read-more-link">
                             <p class="blog__box-read-more-text">czytaj więcej...</p>
                         </a>
                     </div>
@@ -1273,7 +1273,7 @@
                         </p>
                     </div>
                     <div class="blog__box-read-more">
-                        <a href="blog.html" target="_blank" class="blog__box-read-more-link">
+                        <a href="blog.html#article-1" target="_blank" class="blog__box-read-more-link">
                             <p class="blog__box-read-more-text">czytaj więcej...</p>
                         </a>
                     </div>
